Fix docker build